Include swagger docs for cities endpoint
