# doc/swagger/swagger.json
@@ -18,6 +18,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Cars"
+                ],
                 "summary": "Register a new car",
                 "operationId": "register-car",
                 "parameters": [
@@ -58,6 +61,9 @@
                 "description": "Lists cars from a city in pages of 20 elements. from_car_id parameter\nis taken as the last seen car in a previous page.",
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Cars"
                 ],
                 "summary": "List cars",
                 "operationId": "list-cars",
@@ -111,6 +117,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Cars"
+                ],
                 "summary": "Get a car",
                 "operationId": "get-car",
                 "parameters": [
@@ -157,6 +166,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Cars"
                 ],
                 "summary": "Update a car",
                 "operationId": "update-car",
@@ -211,6 +223,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Cars"
+                ],
                 "summary": "Delete a car",
                 "operationId": "delete-car",
                 "parameters": [
@@ -237,6 +252,33 @@
                         "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/docs.ErrorResponseNotFound"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/docs.ErrorResponseInternalServer"
+                        }
+                    }
+                }
+            }
+        },
+        "/cities/names": {
+            "get": {
+                "description": "Lists the names of all the currently supported cities",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cities"
+                ],
+                "summary": "List cities",
+                "operationId": "list-cities",
+                "responses": {
+                    "200": {
+                        "description": "Cities name",
+                        "schema": {
+                            "$ref": "#/definitions/docs.ListCitiesNameResponse"
                         }
                     },
                     "500": {
@@ -380,6 +422,22 @@
                     "items": {
                         "$ref": "#/definitions/docs.CarResponse"
                     }
+                }
+            }
+        },
+        "docs.ListCitiesNameResponse": {
+            "type": "object",
+            "properties": {
+                "cities_name": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "Chicago",
+                        "Los Angeles",
+                        "New York"
+                    ]
                 }
             }
         }
