# internal/infrastructure/driver_adapters/handlers/cities.go
@@ -19,6 +19,14 @@ func NewCities(cs ports.CitiesService) Cities {
 	}
 }
 
+// @Summary List cities
+// @Description Lists the names of all the currently supported cities
+// @ID list-cities
+// @Produce json
+// @Success 200 {object} docs.ListCitiesNameResponse "Cities name"
+// @Failure 500 {object} docs.ErrorResponseInternalServer "Internal Server Error"
+// @Tags Cities
+// @Router /cities/names [get]
 func (ch Cities) ListNames(w http.ResponseWriter, r *http.Request) {
 	citiesName, err := ch.CitiesService.ListNames(r.Context())
 	if err != nil {
